--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ geopy~=2.2.0
 Scrapy~=2.7.0
 instagrapi~=1.16.29
 TikTokApi~=5.2.2
+numpy~=1.23.1
+requests~=2.28.1
+wikipedia~=1.4.0
+beautifulsoup4~=4.11.1
+lxml~=4.9.1
