--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ requests~=2.28.1
 wikipedia~=1.4.0
 beautifulsoup4~=4.11.1
 lxml~=4.9.1
+SQLAlchemy~=1.4.42
+PyMySQL~=1.0.2
+multiprocesspandas~=1.1.3
