--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 selenium~=4.5.0
 parsel~=1.6.0
-pandas~=1.4.3
+pandas~=1.5.0
 geopy~=2.2.0
 Scrapy~=2.7.0
 instagrapi~=1.16.29
@@ -14,3 +14,6 @@ SQLAlchemy~=1.4.42
 PyMySQL~=1.0.2
 multiprocesspandas~=1.1.3
 tqdm~=4.64.0
+fuzzywuzzy[speedup]~=0.18.0
+webdriver-manager~=3.8.4
+hanging-threads~=2.0.5
